--- a/BlazorApp2/Pages/Home.razor
+++ b/BlazorApp2/Pages/Home.razor
@@ -1,7 +1,7 @@
-﻿@page "/"
+﻿@page "/home"
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, Blazor 2 !</h1>
+<h1>Hello, Blazor 2 v3 OMG (2) !!!!!!</h1>
 
 Welcome to your new app.
