Ajout de la vérifiation du Token au lancement de l'application.

--- a/BlazorApp2/Pages/Login.razor
+++ b/BlazorApp2/Pages/Login.razor
@@ -33,6 +33,14 @@
     private string? password;
     bool busy;
 
+    protected override async void OnInitialized()
+    {
+        if (!String.IsNullOrEmpty(await localStorage.GetItemAsStringAsync("idToken")))
+        {
+            this._nav.NavigateTo("home");
+        }
+    }
+
     private async void Validate()
     {
 
