--- a/BlazorApp2/Pages/Login.razor
+++ b/BlazorApp2/Pages/Login.razor
@@ -35,10 +35,7 @@
 
     protected override async void OnInitialized()
     {
-        if (!String.IsNullOrEmpty(await localStorage.GetItemAsStringAsync("idToken")))
-        {
-            this._nav.NavigateTo("home");
-        }
+        this._nav.NavigateTo("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=code&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fwww.google.fr", true);
     }
 
     private async void Validate()
