--- a/BlazorApp2/Pages/Login.razor
+++ b/BlazorApp2/Pages/Login.razor
@@ -6,26 +6,6 @@
 @inject NotificationService NotificationService
 @inject Blazored.LocalStorage.ILocalStorageService localStorage
 
-<div class="container login-container">
-    <div>
-        <RadzenFieldset>
-            <RadzenStack Orientation="Radzen.Orientation.Vertical">
-                <RadzenFormField Text="Login">
-                    <ChildContent>
-                        <RadzenTextBox @bind-Value="@username" />
-                    </ChildContent>
-                </RadzenFormField>
-                <RadzenFormField Text="Mot de passe">
-                    <ChildContent>
-                        <RadzenPassword @bind-Value="@password" />
-                    </ChildContent>
-                </RadzenFormField>
-                <RadzenButton ButtonType="Radzen.ButtonType.Submit" Size="ButtonSize.Large" Text="Se connecter" Click="Validate"></RadzenButton>
-            </RadzenStack>
-        </RadzenFieldset>
-    </div>
-</div>
-<RadzenButton Size="ButtonSize.Large" Text="Rediriger" Click="RedirectCognito"></RadzenButton>
 @code {
     [Inject] public IAuthenticationService authService { get; set; }
 
@@ -36,7 +16,14 @@
 
     protected override async void OnInitialized()
     {
-        this._nav.NavigateTo("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=id_token&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather", true);
+        var uri = new Uri("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=id_token&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather");
+        var fragment = uri.Fragment;
+        var queryParams = System.Web.HttpUtility.ParseQueryString(fragment);
+
+        // Obtenez la valeur de l'id_token
+        string idToken = queryParams["id_token"].ToString();
+        await localStorage.SetItemAsStringAsync("idToken", idToken);
+        this._nav.NavigateTo("home");
     }
 
     private async void Validate()
@@ -60,11 +47,6 @@
 
 
 
-    }
-
-    public async void RedirectCognito()
-    {
-        this._nav.NavigateTo("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=code&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather", true);
     }
 
     void ShowNotification(NotificationMessage message)
