--- a/BlazorApp2/Pages/Login.razor
+++ b/BlazorApp2/Pages/Login.razor
@@ -16,7 +16,7 @@
 
     protected override async void OnInitialized()
     {
-        var uri = new Uri("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=id_token&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather");
+        var uri = new Uri("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=token&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather");
         var fragment = uri.Fragment;
         var queryParams = System.Web.HttpUtility.ParseQueryString(fragment);
 
