--- a/BlazorApp2/Pages/Login.razor
+++ b/BlazorApp2/Pages/Login.razor
@@ -16,14 +16,13 @@
 
     protected override async void OnInitialized()
     {
-        var uri = new Uri("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=token&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather");
-        var fragment = uri.Fragment;
-        var queryParams = System.Web.HttpUtility.ParseQueryString(fragment);
+        _nav.NavigateTo("https://ttkapidomain.auth.eu-west-3.amazoncognito.com/login?client_id=6f4m403a7ocbfa16275rpqn7d4&response_type=token&scope=email+openid+phone+ttkapiresourceserver%2Fmainscope&redirect_uri=https%3A%2F%2Fblazorapp2.teletech-int.info%2Fweather", true);
+        var uri = _nav.ToAbsoluteUri(_nav.Uri).Query;
+        var queryParams = System.Web.HttpUtility.ParseQueryString(uri);
 
         // Obtenez la valeur de l'id_token
         string idToken = queryParams["id_token"].ToString();
         await localStorage.SetItemAsStringAsync("idToken", idToken);
-        this._nav.NavigateTo("home");
     }
 
     private async void Validate()
