--- a/BlazorApp2/Pages/Weather.razor
+++ b/BlazorApp2/Pages/Weather.razor
@@ -45,23 +45,37 @@ else
 
 @code {
     private WeatherForecast[]? forecasts;
-    string? Token { get; set;
-    }
+    string? Token { get; set; }
     [Inject] public IAuthenticationService authService { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
+        var queryString = _nav.ToAbsoluteUri(_nav.Uri).Query;
+        if (!string.IsNullOrEmpty(queryString) && queryString.Contains("code"))
+        {
+            //
+            var uri = new Uri(_nav.Uri);
+
+            string query = uri.Query.TrimStart('?');
+            string code = System.Web.HttpUtility.ParseQueryString(query).Get("code");
+
+            string idToken = await authService.GetIdToken(code);
+
+            Token = idToken;
+            await localStorage.SetItemAsStringAsync("idToken", idToken);
+
+            // Supprimer le paramètre "code" de l'URL
+            _nav.NavigateTo("weather", forceLoad: true);
+        }
+
         forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
 
-        var uri = new Uri(_nav.Uri);
+        if (String.IsNullOrEmpty(await localStorage.GetItemAsStringAsync("idToken")))
+        {
+            
 
-        string query = uri.Query.TrimStart('?');
-        string code = System.Web.HttpUtility.ParseQueryString(query).Get("code");
+        }
 
-        string idToken = await authService.GetIdToken(code);
-
-        Token = idToken;
-        await localStorage.SetItemAsStringAsync("idToken", idToken);
     }
 
     public class WeatherForecast
