--- a/BlazorApp2/Pages/Weather.razor
+++ b/BlazorApp2/Pages/Weather.razor
@@ -38,10 +38,10 @@ else
             }
         </tbody>
     </table>
-}
+}   
 
 @Token
-
+<RadzenButton Click="GoToCounter">Counter</RadzenButton>
 
 @code {
     private WeatherForecast[]? forecasts;
@@ -63,5 +63,10 @@ else
         public string? Summary { get; set; }
 
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    }
+
+    public void GoToCounter()
+    {
+        _nav.NavigateTo("counter");
     }
 }
